2005-04-08  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkkeymap.xml (translate_keyboard_state): Remove extra arg from
	example call. (Nikos Kouremenos)

2005-04-04  John Finlay  <finlay@moeraki.com>

	* pygtk-hierarchy.xml: Add new 2.6 classes. (Nikos Kouremenos)

	* pygtk-gtkwindow.xml (set_keep_above): Fix link to "Extended Window
	Manager Hints" spec. (Nikos Kouremenos)

2005-04-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkdialog.xml (Description, Constructor): Add links to 
	constants used for response IDs and flags. Fixes #172550 (Johan Dahlin)

2005-03-31  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcalendar.xml (Description, get_date): Add note about
	month value starting at zero. Patch by Gian Mario Tagliaretti.

	* pygtk2-ref.xml: Bump version number and change date.

	======== 2.5.2 ============
2005-03-05  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Bump version number and change date.

	* pygtk-introduction (Major Changes) Update description with new
	GTK+ 2.6 classes and add gtk.glade module.

2005-02-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkcursor.xml (gtk.gdk.Cursor): Rephrase constructor
	descriptions to clarify how to make an invisible cursor. Fixes #168755
	(get_display) Fix mangled description.

2005-02-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderertext.xml (Properties): Add GTK+ 2.6
	properties ellipsize, ellipsize-set, width-chars. Alphabetize entries.
	Fixes #167504 (Rafael Villar Burke)

2005-02-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderer.xml (stop_editing, "editing-started"):
	Add descriptions of these PyGTK 2.6 additions.

2005-01-18  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref-xml: Add pygtk-glade-classes.xml. Change date.

	* pygtk-glade-classes.xml
	* pygtk-gladexml.xml: Add these files created by Johan Dahlin.

	* pygtk-gladexml-classes.xml: Remove.

2005-01-15  John Finlay  <finlay@moeraki.com>
