@@ -144,7 +144,6 @@
                 <link linkend="class-gtkpaned">gtk.Paned</link>
                     <link linkend="class-gtkhpaned">gtk.HPaned</link>
                     <link linkend="class-gtkvpaned">gtk.VPaned</link>
-                <link linkend="class-gtk">gtk.Socket</link>
                 <link linkend="class-gtksocket">gtk.Socket</link>
                 <link linkend="class-gtktable">gtk.Table</link>
                 <link linkend="class-gtktextview">gtk.TextView</link>
