@@ -1,3 +1,8 @@
+2005-04-10  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gdk-functions.xml (gtk.gdk.threads_init): Remove confusing
+	and possibly erroneous description. Fixes #172615 (John Ehresman)
+
 2005-04-08  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkkeymap.xml (translate_keyboard_state): Remove extra arg from
